# BlogStyleAgent

./: .gitignore  requirements.txt
phase1/: README.md  pyproject.toml
phase1/src/phase1/: crew.py  main.py
phase1/src/phase1/config/: agents.yaml  tasks.yaml
