[tool.poetry]
name = "phase1"
version = "0.1.0"
description = "phase1 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
phase1 = "phase1.main:run"
run_crew = "phase1.main:run"
train = "phase1.main:train"
replay = "phase1.main:replay"
test = "phase1.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
